feat: switch to virtual thread executor and add Semaphore for DB connection control
- Replace fixed thread pool with virtual thread per task executor in `EfficientTransactionIngestor`
- Introduce `Semaphore` to limit database connections in `TransactionDBRepository` to 30